Bug 82193 - Monitor section "Option Primary true" no longer works
Summary: Monitor section "Option Primary true" no longer works
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium minor
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-05 14:11 UTC by jugg
Modified: 2014-12-31 22:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (36.68 KB, text/plain)
2014-08-05 14:11 UTC, jugg
no flags Details

Description jugg 2014-08-05 14:11:03 UTC
Created attachment 104071 [details]
Xorg.0.log

I just went through a system update on Archlinux, updating to xorg-server 1.16 which also pulled along requirement for version 2.99.914 of xf86-video-intel   (previously I was at 2.99.911). Also notable was a kernel upgrade from 3.10.x to 3.14.x.

Since this upgrade, my Monitor section specified in 30-monitor.conf seems to no longer listen to the Primary option (but it does listen to the other Options):

Section "Monitor"
  Identifier "HDMI1"
  Option "Primary" "true"
  Option "RightOf" "eDP1"
  Option "PreferredMode" "1920x1200"
EndSection

The primary display is still "eDP1" (which has no conf Monitor section) on boot rather than the specified "HDMI1".  Adding a Monitor section for eDP1 with `Option "Primary" "false"` does not help.
Comment 1 Chris Wilson 2014-08-05 15:10:38 UTC
Define your expectations for Primary.

The man pages says:

Option "Primary" "bool"
   This optional entry specifies that the monitor should be treated as the primary monitor. (RandR 1.2-supporting drivers only)

and the code does nothing of the sort!
Comment 2 Chris Wilson 2014-08-05 15:42:41 UTC
If you are expecting the PrimaryOutput to be set,

commit c5e654cf2afcafbe3732548359771747dac1ce26
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Aug 5 16:21:19 2014 +0100

    sna: Set the RandR primary output from the option
    
    If the user specifies the Option "Primary" for a monitor, we need to set
    it as the RandR primary output.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82193

will do just that. Otherwise, please fix your client to use the RandR PrimaryOutput :)
Comment 3 jugg 2014-08-05 16:08:21 UTC
Prior to updating my system, when setting a monitor as Primary, the affect was that my window manager used that Primary monitor to place its taskbar and other widgets.  That no longer happens since updating.
Comment 4 jugg 2014-08-05 17:02:08 UTC
Thanks a lot Chris, I was able to compile and install from git with that commit, and this issue is now resolved!  Much appreciated.
Comment 5 Chris Wilson 2014-08-05 18:18:33 UTC
Good, that's a relief. I was worried that you had a dependency upon the exact ordering of the outputs - which would be bad.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.