sna: Set the RandR primary output from the option

If the user specifies the Option "Primary" for a monitor, we need to set
it as the RandR primary output.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82193